syntax = "proto3";

package grpcs;

import "common.proto";
import "providers.proto";

option go_package = "Miscellaneous/grpcs/protos;grpcs";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string sku = 4;
  double price = 5;
  int32 stock = 6;
  int32 min_stock = 7;
  Provider provider = 8;
}

message NewProduct {
  string name = 1;
  string description = 2;
  string sku = 3;
  double price = 4;
  int32 stock = 5;
  int32 min_stock = 6;
  string id_provider = 7;
}

message DataProduct {
  string id = 1;
  string name = 2;
  string description = 3;
  string sku = 4;
  double price = 5;
  int32 stock = 6;
  int32 min_stock = 7;
  string id_provider = 8;
}

message UpdateStockArgs {
  string id = 1;
  int32 stock = 2;
}

message QueryRequest {
  string query = 1;
}

message ProductList {
  repeated Product products = 1;
}

service Products {
  rpc GetAll (Empty) returns (ProductList);
  rpc Get (IdRequest) returns (Product);
  rpc Find (QueryRequest) returns (ProductList);
  rpc Create (NewProduct) returns (Empty);
  rpc Update (DataProduct) returns (Empty);
  rpc Delete (IdRequest) returns (Empty);
  rpc UpdateStock (UpdateStockArgs) returns (Empty);
}
